2008-06-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint52.xml: Updated the driver entry to version
	  5.2.0 beta 3 of the Gutenprint driver.

	* driver/pegg.xml: Updated driver entry, especially the URL, as the
	  driver is rehosted at OpenPrinting now.

2008-06-25  Dafydd Crosby <dcrosby@userful.com>
	* added PPD/Okidata/OK8800_a.ppd
	* added following printers:
	Okidata B6250
	Okidata B6250n
	Okidata B6250dn
	Okidata B6300
	Okidata B6300n
	Okidata B6300dn
	Okidata B6500
	Okidata B6500n
	Okidata B6500dn
	Okidata C8800n
	Okidata C8800dn

2008-06-25  George Liu <george.liu@ricoh-tech.com>
	* PPD: Added Ricoh-GX_3050SFN.PPD
	* printer: Added Ricoh-GX_3050SFN.xml
	* driver/pxlmono.xml: Added printer entry for Ricoh-GX_3050SFN

2008-06-25  George Liu <george.liu@ricoh-tech.com>
	* PPD: Added 34 Postscript and 18 pxlmono PPD files for Ricoh Family
	Group.
	* printer: Added 34 printer entry xml files for Ricoh Family Group
	* driver/Postscript.xml: Added 34 Postscript entries for Ricoh
	* driver/pxlmono.xml: Added 18 pxlmono entries for Ricoh
	
2008-06-23  Dafydd Crosby <dcrosby@userful.com>
	* added PPD/Okidata/ok4350u1.ppd
	* added following printers:
	Okidata B4350
	Okidata B4400
	Okidata B4400n
	Okidata B4600
	Okidata B4600n
	Okidata B4600n PS

2008-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/splix.html: Modified license text to be in plain text
	  format and not in HTML.
	
2008-06-12  Dafydd Crosby <dcrosby@userful.com>
	* Removed Lexmark, Xerox, and Tektronix PPD's due to
	licensing concerns.
	* printer/IBM-Infoprint_1226tn: fixed typo
	* driver/Postscript: added 3 Samsung stubs

2008-06-05  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/gutenprint.spec, driver/gutenprint52.spec: Changed masks
	  for downloadable driver packages to also support Debian
	  packages.

2008-05-28  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/pxlmono.xml, driver/Postscript.xml: Removed added '<?xml