@@ -1,5 +1,5 @@
-<driver id="driver/splix">
- <name>splix</name>
+<driver id="driver/splix2">
+ <name>splix2</name>
  <url>http://splix.ap2c.org/</url>
  <supplier>SpliX project</supplier>
  <thirdpartysupplied />
@@ -46,10 +46,12 @@
   <en>
    Driver for Samsung SPL2 (ML-1710, ...) and SPLc (CLP-500, ...) laser
    printers
+
+   (&lt;b&gt;Development snapshot, not for daily use!&lt;/b&gt;)
   </en>
  </shortdescription>
  <packages>
-  <package scope="general">splix*1.[0-9].[0-9]*</package>
+  <package scope="general">splix*2.0.0*</package>
  </packages>
  <functionality>
   <maxresx>1200</maxresx>
@@ -69,6 +71,15 @@
  </execution>
  <comments>
   <en>
+
+    &lt;b&gt;NOTE: This entry is for the second release candidate of
+    the upcoming SpliX 2.0.0. This version is not yet intended for
+    daily production use. It can have regressions against the current
+    stable release 1.1.1. Use this release if you want to try the new
+    generation of SpliX or if you have a printer which is not
+    supported otherwise. For the stable release &lt;a
+    href=&quot;show_driver.cgi?driver=splix&quot;&gt;go
+    here&lt;/a&gt;.&lt;/b&gt;&lt;p&gt;
 
     SpliX is a set of CUPS printer drivers for SPL (Samsung Printer
     Language) printers. If you have such a printer, you need to
@@ -109,6 +120,9 @@
   </printer>
   <printer>
    <id>printer/Samsung-CLP-510</id>
+  </printer>
+  <printer>
+   <id>printer/Samsung-CLP-550</id>
   </printer>
   <printer>
    <id>printer/Samsung-CLP-600</id>
@@ -181,6 +195,12 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-2250</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2251</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -259,6 +279,12 @@
    </printer>
   <printer>
    <id>printer/Xerox-Phaser_3150</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3160</id>
    <functionality>
     <monochrome />
    </functionality>
