@@ -1,5 +1,8 @@
 2008-06-26  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/splix.xml, driver/splix2.xml: Added separate entry for
+	  the version under development os SpliX.
+
 	* driver/gutenprint52.xml: Updated the driver entry to version
 	  5.2.0 beta 3 of the Gutenprint driver.
 
